test/files/neg/t12110.check
t12110.scala:20: error: type mismatch;
 found   : Unit
 required: Int
    case value unapplyer () => println(value)
               ^
1 error
